--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ input, select, textarea {
 	}
 
 	html, body {
-		background-color: #101010;
+		background-color: #A9D0F5;
 		overflow: hidden;
 	}
 
