--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -19,7 +19,7 @@
 		width: calc(100% - 22.5em * 0.333333333);
 		height: 4em;
 		margin-top: -2em;
-		color: #282828;
+		color: #A9BCF5;
 		cursor: default;
 		font-size: 3em;
 		line-height: 4em;
