alterei cor de novo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,7 @@ input, select, textarea {
 
 	body {
 		background-color: #A9BCF5;
-		color: #aaa;
+		color: #A9BCF5;
 	}
 
 	body, input, select, textarea {
