retirei ultima alteração de cor

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,8 +136,8 @@ input, select, textarea {
 		}
 
 	body {
-		background-color: #A9BCF5;
-		color: #A9BCF5;
+		background-color: #fff;
+		color: #aaa;
 	}
 
 	body, input, select, textarea {
