alterei cor do texto

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@ input, select, textarea {
 		font-weight: 400;
 		line-height: 1.65;
 		font-size: 1em;
-		color: #A9BCF5;
+		color: #848484;
 	}
 
 	a {
