--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,7 +141,7 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Roboto", Helvetica, sans-serif;
+		font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 		font-weight: 400;
 		line-height: 1.65;
 		font-size: 1em;
